--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^2.11.2",
         "react": "^19.2.0",
         "react-dom": "^19.2.0"
     },
