--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
         "format:check": "prettier --check ."
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.8",
+        "@mui/material": "^7.3.8",
         "@reduxjs/toolkit": "^2.11.2",
+        "@tanstack/react-query": "^5.90.21",
+        "@tanstack/react-query-devtools": "^5.91.3",
+        "@types/react-redux": "^7.1.34",
+        "axios": "^1.13.5",
         "react": "^19.2.0",
-        "react-dom": "^19.2.0"
+        "react-dom": "^19.2.0",
+        "react-redux": "^9.2.0"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.2",
